更新包说明

--- a/Book/8.2ET Package目录.md
+++ b/Book/8.2ET Package目录.md
@@ -29,3 +29,7 @@ ET Package目录，简单描述，具体说明请看包中的Readme
 | 0025 | cn.etetet.ui                      |     et框架实现的一个简单UI|
 | 0026 | cn.etetet.watcher                 |     用于监视进程，拉起进程，防止进程挂掉|
 | 0027 | cn.etetet.robotcase               |     测试用例组件|
+| 0028 | cn.etetet.startconfig             |     服务器配置|
+| 0029 | cn.etetet.memorypack              |     memorypack|
+| 0030 | cn.etetet.hybridclr               |     hybridclr热更新支持|
+| 0031 | cn.etetet.ai                      |     行为机模块，用来写ai非常方便|
