更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -55,7 +55,7 @@
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
 
-2. 点击Unity菜单 -> ET -> Compile(或按快捷键**F6**)进行编译
+2. 右键编译ET.sln
 
 3. 点击HybridCLR -> Generate -> All
 
