--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -17,7 +17,7 @@
    
 7. 在你的github中获取token，获取方法：打开 https://github.com/settings/tokens 选择tokens(classic),点击generate new token，下面全部勾选，点击确定，复制你的token保存
    
-8. 打开菜单Packages->Manage scope registries, 点击ET-Packages Edit, 把你的github token粘贴到token里面 save，然后再看到User Credentials on this computer点+号，
+8. 打开菜单ET->Init->Manage scope registries, 点击ET-Packages Edit, 把你的github token粘贴到token里面 save，然后再看到User Credentials on this computer点+号，
    Registry URL填入 https://npm.pkg.github.com/@ET-Packages
    token填入你的github token  
    always auth 填 true
