新增 XET 相关包目录

--- a/Book/8.2ET Package目录.md
+++ b/Book/8.2ET Package目录.md
@@ -50,3 +50,7 @@ ET Package目录，简单描述，具体说明请看包中的Readme
 | 1304 | [cn.etetet.yiuireddot](https://github.com/ET-Packages/cn.etetet.yiuireddot)                                     | [红点](https://lib9kmxvq7k.feishu.cn/wiki/XzyawmryHitNVNk9QVtcDAftn5O)            |
 | 1305 | [cn.etetet.yiuilocalization](https://github.com/ET-Packages/cn.etetet.yiuilocalization)                         | [多语言](https://lib9kmxvq7k.feishu.cn/wiki/ZOKxwi5XsijdX8kPU9McSxs1nxd)           |
 | 1306 | [cn.etetet.yiuieffect](https://github.com/ET-Packages/cn.etetet.yiuieffect)                                     | [UI特效](https://lib9kmxvq7k.feishu.cn/wiki/PA9CwTAMMiBxx9k30iBcXJnznIc)          |
+|      | 2000-2999 XET                                                                                                   |  |
+| 2000 | [cn.etetet.xetdemo](https://github.com/ET-Packages/cn.etetet.xetdemo)                                           | XET Demo，演示了 cn.etetet.xetfui 的使用方式 |
+| 2001 | [cn.etetet.xetfui](https://github.com/ET-Packages/cn.etetet.xetfui)                                             | FairyGUI 代码导出工具 |
+| 2002 | [cn.etetet.xetyooassets](https://github.com/ET-Packages/cn.etetet.xetyooassets)                                 | 在 cn.etetet.yooassets 基础上加了一些需要的功能 |
