增加付费包制作说明

--- a/Book/8.1ET Package制作指南.md
+++ b/Book/8.1ET Package制作指南.md
@@ -37,3 +37,12 @@
 12. demo包制作需要给Model ModelView Hotfix HotfixView4个asmdef加上INITED宏，防止包一下载下来就生效，导致错误。只有在运行ET->Init后才会加上INITED宏，这样4个程序集才会生效
 13. 注意为了让自定义菜单简洁统一，Package自定义的菜单使用"ET->Package名->具体功能" 这种风格，例如ET->Loader->Init
 14. 为了控制打包裁剪问题，demo可以在自己包目录放置一个link.xml控制裁剪，init的时候会把link.xml链接到Assets目录，因为Unity只扫描Assets中的link.xml
+
+# ET Package付费包制作
+1. 付费包的制作过程跟上面是一样的，区别是一踢公司（熊猫）会开通一个私有仓库给开发者，开发者制作出来的包也是私有的
+2. 用户要安装包需要开通权限，用户需要找一踢公司（熊猫）付费开通，开通之后就能正常访问包跟仓库
+3. 假如开发者的仓库不提供源码给用户，只提供包，这也是可行的，具体找一踢公司（熊猫）聊
+4. 付费包双方职责：开发者制作包，维护包，确保包正常使用，一踢公司（熊猫）负责收费开通权限，维护包下载安装稳定，以及github packages的相关费用支出。包的定价由开发者跟一踢公司（熊猫）双方商量决定
+5. 收入分成，开发者跟一踢公司（熊猫）分成比例是7:3，注意分成都是税前，如果开发者是公司，则7成扣除税后（假如有的话）直接转入开发者的公司账户，如果开发者是个人，一踢公司（熊猫）需要扣除税再支付给个人开发者
+6. 结账周期是3个月结账一次
+   
