增加新的包安装方式

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -27,28 +27,29 @@
     新手最好先选择状态同步，因为我都是先修改状态同步，偶尔会漏改了帧同步，等状态同步跑通再尝试帧同步
    
 10. 打开Unity的菜单Windows->PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载，如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功，这时候仍然有大量报错，暂时不用管。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果有ET开头的包不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
+11. 如果网络较差，等很久就安装不成功。可以关闭Unity，找到demo的git代码地址，代码在这里找（https://github.com/orgs/ET-Packages/repositories），clone下来，移动到Packages目录，重启Unity，Unity就会自动下载依赖，并且会显示下载进度，该方案安装体验更好一些
 
-11. 运行Unity菜单 ET->StateSync->Init或者ET->LockStep->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏，并且自动链接demo中的ET.sln到根目录，并且把Loader包中的GlobalConfig中的SceneName设置成demo名）
+12. 运行Unity菜单 ET->StateSync->Init或者ET->LockStep->Init （这一步会导Excel 导Proto 生成assemlbyreference 添加INITED宏，并且自动链接demo中的ET.sln到根目录，并且把Loader包中的GlobalConfig中的SceneName设置成demo名）
     
-12. Unity中将Packages/ET.Loader/Resources/GlobalConfig中的CodeMode改成ClientServer，将SceneName设置成demo名StateSync或者LockStep（这个在上一步会自动设置，你这里检查一下名字是不是demo名）, 这个选项是将服务端运行在Unity中，一体化运行。如果客户端单独打包的话，这里要使用Client
+13. Unity中将Packages/ET.Loader/Resources/GlobalConfig中的CodeMode改成ClientServer，将SceneName设置成demo名StateSync或者LockStep（这个在上一步会自动设置，你这里检查一下名字是不是demo名）, 这个选项是将服务端运行在Unity中，一体化运行。如果客户端单独打包的话，这里要使用Client
     
-13. 点击Unity菜单 Assets->Open C# Project，这里由于修改了rider插件，会自动打开ET.sln
+14. 点击Unity菜单 Assets->Open C# Project，这里由于修改了rider插件，会自动打开ET.sln
     
-14. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
+15. 编译整个ET.sln, 注意要翻墙，否则可能nuget包下载不下来，导致编译出错(翻墙后如果还有报错解决不了可以尝试先用VS打开ET.sln编译一次后再回到Rider重新编译一次)
 
-15. Unity中, 然后双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
+16. Unity中, 然后双击Packages/ET.Loader/Scenes/Init场景，点击Play(▶)即可运行
 
-16. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端都要重新编译，都要重启即可
+17. 帧同步默认是一个人匹配，如果需要多人匹配，修改**LSConstValue.cs**中的**MatchCount** 客户端服务端都要重新编译，都要重启即可
 
-17. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
+18. 注意要独立启动服务器，右键UnityHub，以管理员身份运行UnityHub，然后启动Unity（没有管理员启动是不行的，因为服务端要开启http服务，普通权限开不了），
    停止Unity Play，点开Unity菜单->ET->Server Tools->Start Server(Single Process)，这样就单独启动了服务端。打开Unity菜单 -> ET -> BuildTool中CodeMode改成Client，点击Unity Play，登录。  
    如果还是连接不上报10037错误，注意看ET/Logs目录，看有没有Error日志。 如果要用rider启动服务器，rider也必须用管理员权限启动
    注意一定要用 netsh http delete urlacl 命令删除掉所有自己添加的urlacl，具体使用方法请谷歌
    客户端注意要打开cn.etetet.loader/Resources/GlobalConfig, 把CodeMode换成Client
 
-18. 注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1。用rider启动默认是在Bin目录，需要自己修改运行目录，去掉Bin
+19. 注意独立运行服务器的目录不再是Bin目录，而是Bin的上一层目录，也就是Unity目录，比如 dotnet.exe Bin/ET.App.dll --Console=1。用rider启动默认是在Bin目录，需要自己修改运行目录，去掉Bin
 
-19. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
+20. 有问题请论坛提问，贴出服务端error log跟客户端error log，没有日志无法回复
 
 # 打包过程
 1. 点击HybridCLR -> Installer，点击安装，等待安装完成
