更新运行指南，推荐在manifest.json中添加包，这样安装最快

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -26,7 +26,7 @@
 9. 在https://github.com/orgs/ET-Packages/packages 中选择一个demo包安装，目前有两个demo， cn.etetet.lockstep跟cn.etetet.statesync分别是帧同步跟状态同步（一个工程只能安装一个demo，不能同时装多个）
     新手最好先选择状态同步，因为我都是先修改状态同步，偶尔会漏改了帧同步，等状态同步跑通再尝试帧同步
    
-10. 打开Unity的菜单Windows->PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载。如果很久都安装不成功，这是因为Unity有bug导致安装很慢。可以关闭Unity，打开Packages/manifest.json, 在dependencies中加上demo包跟版本号，例如"cn.etetet.lockstep": "0.0.36", 注意后面有个逗号，重启Unity，Unity就会自动下载依赖，并且会显示下载进度，该方案安装速度更快。
+10. 两种安装包的方式，第一种，可以关闭Unity，打开Packages/manifest.json, 在dependencies中加上demo包跟版本号，例如"cn.etetet.lockstep": "0.0.36", 注意后面有个逗号，重启Unity，Unity就会自动下载依赖，并且会显示下载进度，该方案安装速度更快。第二种，打开Unity的菜单Windows->PackageManager，点击左上角加号，选择add package by name，输入包名，点击右边add，会把所有的依赖包下载。这种因为Unity有bug导致安装很慢。推荐使用第一种安装方式。
 
 11. 如果没有出现日志git Dependencies are all installed，说明安装不完整，可以重新点击ET->Init->RepairDependencies修复，直到安装成功。注意，在PackageManager中观察一下，所有的ET开头的包都会是Custom包，这是因为安装后ET会把包挪到Packages目录，从而变成Custom包，如果有ET开头的包不是Custom，请重新点击ET->Init->RepairDependencies然后刷新Unity
 
