更新运行指南

--- a/Book/1.1运行指南.md
+++ b/Book/1.1运行指南.md
@@ -71,7 +71,7 @@
 
    ④点击'**Click Build**'
 
-6. Assets/Resources/GlobalConfig EPlayMode选择'HostPlayMode', 打开Unity菜单 -> ET -> BuildTool，点击'BuildPackage'，Windows下生成的exe在'ET/Release'里面
+6. ET.YooAssets/Resources YooConfig中 EPlayMode选择'HostPlayMode', 打开Unity菜单 -> ET -> BuildTool，点击'BuildPackage'，Windows下生成的exe在'ET/Release'里面
 
 另：**请自行研究**YooAsset包管理库的使用方式([YooAsset官网](https://www.yooasset.com/))
 
