更新包目录

--- a/Book/8.2ET Package目录.md
+++ b/Book/8.2ET Package目录.md
@@ -1,56 +1,59 @@
 ET Package目录，简单描述，具体说明请看包中的Readme
 
-| 编号   | 包名 | 描述 |
-|------|-------|-------|
-| 0001 | cn.etetet.core                    |     et框架核心, 实现了纤程，网络，entity等et基础功能                           |
-| 0002 | cn.etetet.loader                  |     et框架核心，是一个加载器，用于加载model modelview hotfix hotfixview        |
-| 0003 | cn.etetet.actorlocation           |     实现了actor location机制                                                |
-| 0004 | cn.etetet.move                    |     mmo类型的移动组件|
-| 0005 | cn.etetet.unit                    |     提供一个包含位置旋转的entity，可以作为场景中的实体|
-| 0006 | cn.etetet.db                      |     一个简单的mongodb封装|
-| 0007 | cn.etetet.yooassets               |     提供了yooassets的封装                               
+| 编号   | 包名 | 描述 | 价格（元） |
+|------|-------|-------|-------|
+| 0001 | cn.etetet.core                    |     et框架核心, 实现了纤程，网络，entity等et基础功能                           | |
+| 0002 | cn.etetet.loader                  |     et框架核心，是一个加载器，用于加载model modelview hotfix hotfixview        | |
+| 0003 | cn.etetet.actorlocation           |     实现了actor location机制                                                | |
+| 0004 | cn.etetet.move                    |     mmo类型的移动组件| |
+| 0005 | cn.etetet.unit                    |     提供一个包含位置旋转的entity，可以作为场景中的实体| |
+| 0006 | cn.etetet.db                      |     一个简单的mongodb封装| |
+| 0007 | cn.etetet.yooassets               |     提供了yooassets的封装                                | |
 | 0008 | cn.etetet.demores                 |     et自带demo的一些资源|                  |
-| 0009 | cn.etetet.login                   |     实现前后端登录流程，客户端网络是独立的纤程，服务端提供了realm gate scene   |    
-| 0010 | cn.etetet.statesync               |     状态同步demo|
-| 0011 | cn.etetet.lockstep                |     预测回滚的帧同步demo|
-| 0012 | cn.etetet.proto                   |     proto2cs工具，用于把proto文件导出成C#                                      |  
-| 0013 | cn.etetet.excel                   |     excelexporter工具，把excel导出成代码跟配置数据                             | 
-| 0014 | cn.etetet.recast                  |     3d recast寻路库                                                       |
-| 0015 | cn.etetet.router                  |     et的软路由，可以防网络攻击                                           |
-| 0016 | cn.etetet.http                    |     简单的http库                                                             |
-| 0017 | cn.etetet.referencecollector      |     一个unity脚本，可以挂在gameobject上实现资源引用|
-| 0018 | cn.etetet.console                 |     实现了控制台解析分发                                                   |
-| 0019 | cn.etetet.aoi                     |     一个九宫格的aoi实现|
-| 0020 | cn.etetet.sourcegenerator         |     et框架的分析器跟代码生成器|
-| 0021 | cn.etetet.lsentity                |     帧同步的Entity实现，提供了lsupdate，lsentity lsworld等功能|
-| 0022 | cn.etetet.truesync                |     帧同步用的定点数实现|
-| 0023 | cn.etetet.numeric                 |     一个数值组件，提供了kv的实现|
-| 0024 | cn.etetet.mathematics             |     一个对unity的mathematics包装，主要是增加对服务端dotnet的支持|
-| 0025 | cn.etetet.ui                      |     et框架实现的一个简单UI|
-| 0026 | cn.etetet.watcher                 |     用于监视进程，拉起进程，防止进程挂掉|
-| 0027 | cn.etetet.robotcase               |     测试用例组件|
-| 0028 | cn.etetet.netinner                |     内网消息模块|
-| 0029 | cn.etetet.startconfig             |     服务器配置|
-| 0030 | cn.etetet.memorypack              |     memorypack|
-| 0031 | cn.etetet.hybridclr               |     hybridclr热更新支持|
-| 0032 | cn.etetet.ai                      |     行为机模块，用来写ai非常方便|
+| 0009 | cn.etetet.login                   |     实现前后端登录流程，客户端网络是独立的纤程，服务端提供了realm gate scene   |     |
+| 0010 | cn.etetet.statesync               |     状态同步demo| |
+| 0011 | cn.etetet.lockstep                |     预测回滚的帧同步demo| |
+| 0012 | cn.etetet.proto                   |     proto2cs工具，用于把proto文件导出成C#                                      |   |
+| 0013 | cn.etetet.excel                   |     excelexporter工具，把excel导出成代码跟配置数据                             |  |
+| 0014 | cn.etetet.recast                  |     3d recast寻路库                                                       | |
+| 0015 | cn.etetet.router                  |     et的软路由，可以防网络攻击                                           | |
+| 0016 | cn.etetet.http                    |     简单的http库                                                             | |
+| 0017 | cn.etetet.referencecollector      |     一个unity脚本，可以挂在gameobject上实现资源引用| |
+| 0018 | cn.etetet.console                 |     实现了控制台解析分发                                                   | |
+| 0019 | cn.etetet.aoi                     |     一个九宫格的aoi实现| |
+| 0020 | cn.etetet.sourcegenerator         |     et框架的分析器跟代码生成器| |
+| 0021 | cn.etetet.lsentity                |     帧同步的Entity实现，提供了lsupdate，lsentity lsworld等功能| |
+| 0022 | cn.etetet.truesync                |     帧同步用的定点数实现| |
+| 0023 | cn.etetet.numeric                 |     一个数值组件，提供了kv的实现| |
+| 0024 | cn.etetet.mathematics             |     一个对unity的mathematics包装，主要是增加对服务端dotnet的支持| |
+| 0025 | cn.etetet.ui                      |     et框架实现的一个简单UI| |
+| 0026 | cn.etetet.watcher                 |     用于监视进程，拉起进程，防止进程挂掉| |
+| 0027 | cn.etetet.robotcase               |     测试用例组件| |
+| 0028 | cn.etetet.netinner                |     内网消息模块| |
+| 0029 | cn.etetet.startconfig             |     服务器配置| |
+| 0030 | cn.etetet.memorypack              |     memorypack| |
+| 0031 | cn.etetet.hybridclr               |     hybridclr热更新支持| |
+| 0032 | cn.etetet.ai                      |     行为机模块，用来写ai非常方便| |
+| 0033 | cn.etetet.webgl                   |     webgl支持 |999 |
+| 0034 | cn.etetet.mongodb                 |     数据库补丁包 |100 |
 | 1000 | [1000-1999 (YIUI Package目录)](https://lib9kmxvq7k.feishu.cn/wiki/XJxLwzTlViqD5TkSAw1c32Rqnd1)
-| 1001 | [cn.etetet.yiuiframework](https://github.com/ET-Packages/cn.etetet.yiuiframework)                               | [框架](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)            |
-| 1002 | [cn.etetet.yiui](https://github.com/ET-Packages/cn.etetet.yiui)                                                 | [框架生成](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)          |
-| 1100 | [cn.etetet.packagemanager](https://github.com/ET-Packages/cn.etetet.packagemanager)                             | [包管理](https://lib9kmxvq7k.feishu.cn/wiki/DzqwwwBJvixRvtkCI4dcatGcnAd)           |
-| 1101 | [cn.etetet.yiuistatesync](https://github.com/ET-Packages/cn.etetet.yiuistatesync)                               | [YIUIDemo 运行指南](https://lib9kmxvq7k.feishu.cn/wiki/H7SmwXozNiliN3kahZFcqQxqnub) |
-| 1201 | [cn.etetet.yiuiloopscrollrectasync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectasync)           | [无限循环列表 (异步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   |
-| 1202 | [cn.etetet.yiuiloopscrollrectsync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectsync)             | [无限循环列表 (同步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   |
-| 1203 | [cn.etetet.yiuiyooassets](https://github.com/ET-Packages/cn.etetet.yiuiyooassets)                               | [YooAsset 资源管理](https://lib9kmxvq7k.feishu.cn/wiki/SUpUwiABuip53zkWEdwcITACntc) |
-| 1204 | [cn.etetet.yiuiluban](https://github.com/ET-Packages/cn.etetet.yiuiluban)                                       | [Luban 配置](https://lib9kmxvq7k.feishu.cn/wiki/W1ylwC9xDip1YQk4eijcxgO9nh0)      |
-| 1205 | [cn.etetet.yiuiinvoke](https://github.com/ET-Packages/cn.etetet.yiuiinvoke)                                       | [Invoke 文档](https://lib9kmxvq7k.feishu.cn/wiki/TpyYwbWIUizhfKkcubocTZgInse)     |
-| 1301 | [cn.etetet.yiuigm](https://github.com/ET-Packages/cn.etetet.yiuigm)                                             | [GM命令](https://lib9kmxvq7k.feishu.cn/wiki/NYADwMydliVmQ7kWXOuc0yxGn7p)          |
-| 1302 | [cn.etetet.yiuitips](https://github.com/ET-Packages/cn.etetet.yiuitips)                                         | [Tips](https://lib9kmxvq7k.feishu.cn/wiki/OdNgwu0KsiyJ6NkK8vCcwbjbn1g)          |
-| 1303 | [cn.etetet.yiui3ddisplay](https://github.com/ET-Packages/cn.etetet.yiui3ddisplay)                               | [UI3D模型展示](https://lib9kmxvq7k.feishu.cn/wiki/FhGGwVZSyiCqHCkTVQYcKHQCnKf)      |
-| 1304 | [cn.etetet.yiuireddot](https://github.com/ET-Packages/cn.etetet.yiuireddot)                                     | [红点](https://lib9kmxvq7k.feishu.cn/wiki/XzyawmryHitNVNk9QVtcDAftn5O)            |
-| 1305 | [cn.etetet.yiuilocalization](https://github.com/ET-Packages/cn.etetet.yiuilocalization)                         | [多语言](https://lib9kmxvq7k.feishu.cn/wiki/ZOKxwi5XsijdX8kPU9McSxs1nxd)           |
-| 1306 | [cn.etetet.yiuieffect](https://github.com/ET-Packages/cn.etetet.yiuieffect)                                     | [UI特效](https://lib9kmxvq7k.feishu.cn/wiki/PA9CwTAMMiBxx9k30iBcXJnznIc)          |
-|      | 2000-2999 XET                                                                                                   |  |
-| 2000 | [cn.etetet.xetdemo](https://github.com/ET-Packages/cn.etetet.xetdemo)                                           | XET Demo，演示了 cn.etetet.xetfui 的使用方式 |
-| 2001 | [cn.etetet.xetfui](https://github.com/ET-Packages/cn.etetet.xetfui)                                             | FairyGUI 代码导出工具 |
-| 2002 | [cn.etetet.xetyooassets](https://github.com/ET-Packages/cn.etetet.xetyooassets)                                 | 在 cn.etetet.yooassets 基础上加了一些需要的功能 |
+| 1001 | [cn.etetet.yiuiframework](https://github.com/ET-Packages/cn.etetet.yiuiframework)                               | [框架](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)            | |
+| 1002 | [cn.etetet.yiui](https://github.com/ET-Packages/cn.etetet.yiui)                                                 | [框架生成](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)          | |
+| 1100 | [cn.etetet.packagemanager](https://github.com/ET-Packages/cn.etetet.packagemanager)                             | [包管理](https://lib9kmxvq7k.feishu.cn/wiki/DzqwwwBJvixRvtkCI4dcatGcnAd)           | |
+| 1101 | [cn.etetet.yiuistatesync](https://github.com/ET-Packages/cn.etetet.yiuistatesync)                               | [YIUIDemo 运行指南](https://lib9kmxvq7k.feishu.cn/wiki/H7SmwXozNiliN3kahZFcqQxqnub) | |
+| 1201 | [cn.etetet.yiuiloopscrollrectasync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectasync)           | [无限循环列表 (异步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
+| 1202 | [cn.etetet.yiuiloopscrollrectsync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectsync)             | [无限循环列表 (同步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
+| 1203 | [cn.etetet.yiuiyooassets](https://github.com/ET-Packages/cn.etetet.yiuiyooassets)                               | [YooAsset 资源管理](https://lib9kmxvq7k.feishu.cn/wiki/SUpUwiABuip53zkWEdwcITACntc) | |
+| 1204 | [cn.etetet.yiuiluban](https://github.com/ET-Packages/cn.etetet.yiuiluban)                                       | [Luban 配置](https://lib9kmxvq7k.feishu.cn/wiki/W1ylwC9xDip1YQk4eijcxgO9nh0)      |100 |
+| 1205 | [cn.etetet.yiuiinvoke](https://github.com/ET-Packages/cn.etetet.yiuiinvoke)                                       | [Invoke 文档](https://lib9kmxvq7k.feishu.cn/wiki/TpyYwbWIUizhfKkcubocTZgInse)     | |
+| 1301 | [cn.etetet.yiuigm](https://github.com/ET-Packages/cn.etetet.yiuigm)                                             | [GM命令](https://lib9kmxvq7k.feishu.cn/wiki/NYADwMydliVmQ7kWXOuc0yxGn7p)          | |
+| 1302 | [cn.etetet.yiuitips](https://github.com/ET-Packages/cn.etetet.yiuitips)                                         | [Tips](https://lib9kmxvq7k.feishu.cn/wiki/OdNgwu0KsiyJ6NkK8vCcwbjbn1g)          | |
+| 1303 | [cn.etetet.yiui3ddisplay](https://github.com/ET-Packages/cn.etetet.yiui3ddisplay)                               | [UI3D模型展示](https://lib9kmxvq7k.feishu.cn/wiki/FhGGwVZSyiCqHCkTVQYcKHQCnKf)      | |
+| 1304 | [cn.etetet.yiuireddot](https://github.com/ET-Packages/cn.etetet.yiuireddot)                                     | [红点](https://lib9kmxvq7k.feishu.cn/wiki/XzyawmryHitNVNk9QVtcDAftn5O)            | |
+| 1305 | [cn.etetet.yiuilocalization](https://github.com/ET-Packages/cn.etetet.yiuilocalization)                         | [多语言](https://lib9kmxvq7k.feishu.cn/wiki/ZOKxwi5XsijdX8kPU9McSxs1nxd)           | |
+| 1306 | [cn.etetet.yiuieffect](https://github.com/ET-Packages/cn.etetet.yiuieffect)                                     | [UI特效](https://lib9kmxvq7k.feishu.cn/wiki/PA9CwTAMMiBxx9k30iBcXJnznIc)          | |
+|      | 2000-2999 XET                                                                                                   |  | |
+| 2000 | [cn.etetet.xetdemo](https://github.com/ET-Packages/cn.etetet.xetdemo)                                           | XET Demo，演示了 cn.etetet.xetfui 的使用方式 | |
+| 2001 | [cn.etetet.xetfui](https://github.com/ET-Packages/cn.etetet.xetfui)                                             | FairyGUI 代码导出工具 | |
+| 2002 | [cn.etetet.xetyooassets](https://github.com/ET-Packages/cn.etetet.xetyooassets)                                 | 在 cn.etetet.yooassets 基础上加了一些需要的功能 | |
+| 3000 | [cn.etetet.configauto](https://github.com/ET-Packages/cn.etetet.configauto)                 |     直接用C#代码作为配置| |
