更新YIUI 相关包目录

--- a/Book/8.2ET Package目录.md
+++ b/Book/8.2ET Package目录.md
@@ -36,24 +36,26 @@ ET Package目录，简单描述，具体说明请看包中的Readme
 | 0032 | cn.etetet.ai                      |     行为机模块，用来写ai非常方便| |
 | 0033 | cn.etetet.webgl                   |     webgl支持 |999 |
 | 0034 | cn.etetet.mongodb                 |     数据库补丁包 |100 |
-| 1000 | [1000-1999 (YIUI Package目录)](https://lib9kmxvq7k.feishu.cn/wiki/XJxLwzTlViqD5TkSAw1c32Rqnd1)
-| 1001 | [cn.etetet.yiuiframework](https://github.com/ET-Packages/cn.etetet.yiuiframework)                               | [框架](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)            | |
-| 1002 | [cn.etetet.yiui](https://github.com/ET-Packages/cn.etetet.yiui)                                                 | [框架生成](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)          | |
-| 1100 | [cn.etetet.packagemanager](https://github.com/ET-Packages/cn.etetet.packagemanager)                             | [包管理](https://lib9kmxvq7k.feishu.cn/wiki/DzqwwwBJvixRvtkCI4dcatGcnAd)           | |
-| 1101 | [cn.etetet.yiuistatesync](https://github.com/ET-Packages/cn.etetet.yiuistatesync)                               | [YIUIDemo 运行指南](https://lib9kmxvq7k.feishu.cn/wiki/H7SmwXozNiliN3kahZFcqQxqnub) | |
-| 1201 | [cn.etetet.yiuiloopscrollrectasync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectasync)           | [无限循环列表 (异步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
-| 1202 | [cn.etetet.yiuiloopscrollrectsync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectsync)             | [无限循环列表 (同步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
-| 1203 | [cn.etetet.yiuiyooassets](https://github.com/ET-Packages/cn.etetet.yiuiyooassets)                               | [YooAsset 资源管理](https://lib9kmxvq7k.feishu.cn/wiki/SUpUwiABuip53zkWEdwcITACntc) | |
-| 1204 | [cn.etetet.yiuiluban](https://github.com/ET-Packages/cn.etetet.yiuiluban)                                       | [Luban 配置](https://lib9kmxvq7k.feishu.cn/wiki/W1ylwC9xDip1YQk4eijcxgO9nh0)      |100 |
-| 1205 | [cn.etetet.yiuiinvoke](https://github.com/ET-Packages/cn.etetet.yiuiinvoke)                                       | [Invoke 文档](https://lib9kmxvq7k.feishu.cn/wiki/TpyYwbWIUizhfKkcubocTZgInse)     | |
-| 1301 | [cn.etetet.yiuigm](https://github.com/ET-Packages/cn.etetet.yiuigm)                                             | [GM命令](https://lib9kmxvq7k.feishu.cn/wiki/NYADwMydliVmQ7kWXOuc0yxGn7p)          | |
-| 1302 | [cn.etetet.yiuitips](https://github.com/ET-Packages/cn.etetet.yiuitips)                                         | [Tips](https://lib9kmxvq7k.feishu.cn/wiki/OdNgwu0KsiyJ6NkK8vCcwbjbn1g)          | |
-| 1303 | [cn.etetet.yiui3ddisplay](https://github.com/ET-Packages/cn.etetet.yiui3ddisplay)                               | [UI3D模型展示](https://lib9kmxvq7k.feishu.cn/wiki/FhGGwVZSyiCqHCkTVQYcKHQCnKf)      | |
-| 1304 | [cn.etetet.yiuireddot](https://github.com/ET-Packages/cn.etetet.yiuireddot)                                     | [红点](https://lib9kmxvq7k.feishu.cn/wiki/XzyawmryHitNVNk9QVtcDAftn5O)            | |
-| 1305 | [cn.etetet.yiuilocalization](https://github.com/ET-Packages/cn.etetet.yiuilocalization)                         | [多语言](https://lib9kmxvq7k.feishu.cn/wiki/ZOKxwi5XsijdX8kPU9McSxs1nxd)           | |
-| 1306 | [cn.etetet.yiuieffect](https://github.com/ET-Packages/cn.etetet.yiuieffect)                                     | [UI特效](https://lib9kmxvq7k.feishu.cn/wiki/PA9CwTAMMiBxx9k30iBcXJnznIc)          | |
-|      | 2000-2999 XET                                                                                                   |  | |
-| 2000 | [cn.etetet.xetdemo](https://github.com/ET-Packages/cn.etetet.xetdemo)                                           | XET Demo，演示了 cn.etetet.xetfui 的使用方式 | |
-| 2001 | [cn.etetet.xetfui](https://github.com/ET-Packages/cn.etetet.xetfui)                                             | FairyGUI 代码导出工具 | |
-| 2002 | [cn.etetet.xetyooassets](https://github.com/ET-Packages/cn.etetet.xetyooassets)                                 | 在 cn.etetet.yooassets 基础上加了一些需要的功能 | |
-| 3000 | [cn.etetet.configauto](https://github.com/ET-Packages/cn.etetet.configauto)                 |     直接用C#代码作为配置| |
+|      | [1000-1999 (YIUI Package目录)](https://lib9kmxvq7k.feishu.cn/wiki/XJxLwzTlViqD5TkSAw1c32Rqnd1)
+| 1001 | [cn.etetet.yiuiframework](https://github.com/ET-Packages/cn.etetet.yiuiframework)                       | [框架](https://lib9kmxvq7k.feishu.cn/wiki/ES7Gwz4EAiVGKSkotY5cRbTznuh)            | |
+| 1100 | [cn.etetet.packagemanager](https://github.com/ET-Packages/cn.etetet.packagemanager)                     | [包管理](https://lib9kmxvq7k.feishu.cn/wiki/DzqwwwBJvixRvtkCI4dcatGcnAd)           | |
+| 1101 | [cn.etetet.yiuistatesync](https://github.com/ET-Packages/cn.etetet.yiuistatesync)                       | [YIUIDemo 运行指南](https://lib9kmxvq7k.feishu.cn/wiki/H7SmwXozNiliN3kahZFcqQxqnub) | |
+| 1201 | [cn.etetet.yiuiloopscrollrectasync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectasync)   | [无限循环列表 (异步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
+| 1202 | [cn.etetet.yiuiloopscrollrectsync](https://github.com/ET-Packages/cn.etetet.yiuiloopscrollrectsync)     | [无限循环列表 (同步)](https://lib9kmxvq7k.feishu.cn/wiki/HPbwwkhsKi9aDik5VEXcqPhDnIh)   | |
+| 1203 | [cn.etetet.yiuiyooassets](https://github.com/ET-Packages/cn.etetet.yiuiyooassets)                       | [YooAsset 资源管理](https://lib9kmxvq7k.feishu.cn/wiki/SUpUwiABuip53zkWEdwcITACntc) | |
+| 1204 | [cn.etetet.yiuiinvoke](https://github.com/ET-Packages/cn.etetet.yiuiinvoke)                               | [Invoke 文档](https://lib9kmxvq7k.feishu.cn/wiki/TpyYwbWIUizhfKkcubocTZgInse)     | |
+| 1301 | [cn.etetet.yiuigm](https://github.com/ET-Packages/cn.etetet.yiuigm)                                     | [GM命令](https://lib9kmxvq7k.feishu.cn/wiki/NYADwMydliVmQ7kWXOuc0yxGn7p)          | |
+| 1302 | [cn.etetet.yiuitips](https://github.com/ET-Packages/cn.etetet.yiuitips)                                 | [Tips](https://lib9kmxvq7k.feishu.cn/wiki/OdNgwu0KsiyJ6NkK8vCcwbjbn1g)          | |
+| 1303 | [cn.etetet.yiui3ddisplay](https://github.com/ET-Packages/cn.etetet.yiui3ddisplay)                       | [UI3D模型展示](https://lib9kmxvq7k.feishu.cn/wiki/FhGGwVZSyiCqHCkTVQYcKHQCnKf)      | |
+| 1304 | [cn.etetet.yiuireddot](https://github.com/ET-Packages/cn.etetet.yiuireddot)                             | [红点](https://lib9kmxvq7k.feishu.cn/wiki/XzyawmryHitNVNk9QVtcDAftn5O)            | |
+| 1305 | [cn.etetet.yiuilocalization](https://github.com/ET-Packages/cn.etetet.yiuilocalization)                 | [多语言](https://lib9kmxvq7k.feishu.cn/wiki/ZOKxwi5XsijdX8kPU9McSxs1nxd)           | |
+| 1306 | [cn.etetet.yiuieffect](https://github.com/ET-Packages/cn.etetet.yiuieffect)                             | [UI特效](https://lib9kmxvq7k.feishu.cn/wiki/PA9CwTAMMiBxx9k30iBcXJnznIc)          | |
+| 1801 | cn.etetet.yiuiluban                                                                                    | [Luban 配置](https://lib9kmxvq7k.feishu.cn/wiki/W1ylwC9xDip1YQk4eijcxgO9nh0)      |100 |
+| 1802 | cn.etetet.yiuinumeric                                       | [Numeric 数值系统](https://lib9kmxvq7k.feishu.cn/wiki/GHDOwsmy0iQQMok3gU7cgxbpn7x)      |100 |
+| 1803 | cn.etetet.yiuicondition                                     | [Condition 条件系统](https://lib9kmxvq7k.feishu.cn/wiki/Kc0awA9EXiRJylkreL9cfLJFnsg)      |(限免)Luban送 |
+| 1804 | cn.etetet.yiuigameobjectpool                                   | [GameObjectPool 游戏对象缓存池](https://lib9kmxvq7k.feishu.cn/wiki/UyigweBFXipNJnkCIY6coHzFnSc)      |(限免)Luban送 |
+|      | 2000-2999 XET                                                                                           |  | |
+| 2000 | [cn.etetet.xetdemo](https://github.com/ET-Packages/cn.etetet.xetdemo)                                   | XET Demo，演示了 cn.etetet.xetfui 的使用方式 | |
+| 2001 | [cn.etetet.xetfui](https://github.com/ET-Packages/cn.etetet.xetfui)                                     | FairyGUI 代码导出工具 | |
+| 2002 | [cn.etetet.xetyooassets](https://github.com/ET-Packages/cn.etetet.xetyooassets)                         | 在 cn.etetet.yooassets 基础上加了一些需要的功能 | |
+| 3000 | [cn.etetet.configauto](https://github.com/ET-Packages/cn.etetet.configauto)           |     直接用C#代码作为配置| |
